# claude-playground

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_OVERVIEW.md  LEARNING_PLAN.md  README.md  Taskfile.yml  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: endpoint-tester.md
.claude/commands/: claude-overview.md  token-audit.md
.claude/docs/: token-efficiency.md
.claude/skills/branch-name/: SKILL.md
.claude/skills/commit-message/: SKILL.md
.claude/skills/install-python-library/: SKILL.md
.claude/skills/pr-description/: SKILL.md
.claude/skills/update-branch-with-main/: SKILL.md
.github/workflows/: ci.yml
scripts/: ask_claude.py  run_tests_mcp.py
tests/: test_main.py
