[project]
name = "claude-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "claude-agent-sdk>=0.1.73",
    "mcp>=1.27.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# Don't auto-strip unused imports during normal `task check` — flag them so
# Claude/the user can decide. Use `task fix` to opt into stripping.
unfixable = ["F401"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
